--- a/one-list-react/package.json
+++ b/one-list-react/package.json
@@ -7,11 +7,13 @@
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "surge": "^0.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "yarn build && surge ./build --domain onelistreact.ambethia.sh"
   }
 }
