--- a/jabberdexicon-rebase/package.json
+++ b/jabberdexicon-rebase/package.json
@@ -29,6 +29,8 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "mobx": "^3.1.9",
+    "mobx-react": "^4.1.8",
     "node-sass": "^4.5.2",
     "postcss-loader": "^1.3.3",
     "raw-loader": "^0.5.1",
@@ -39,6 +41,7 @@
     "rebass": "^0.3.4",
     "redbox-react": "^1.3.6",
     "sass-loader": "^6.0.3",
+    "seedrandom": "^2.4.3",
     "style-loader": "^0.16.1",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
@@ -47,5 +50,8 @@
     "webpack-dev-server": "^2.4.5",
     "webpack-merge": "^4.1.0",
     "whatwg-fetch": "^2.0.3"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4"
   }
 }
