--- a/minesweeper/package.json
+++ b/minesweeper/package.json
@@ -48,5 +48,8 @@
     "webpack-dev-server": "^2.4.5",
     "webpack-merge": "^4.1.0",
     "whatwg-fetch": "^2.0.3"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4"
   }
 }
