--- a/tic-tac-toe-react/package.json
+++ b/tic-tac-toe-react/package.json
@@ -1,28 +1,26 @@
 {
   "private": true,
   "scripts": {
-    "predeploy": "yarn build && cp public/index.html public/200.html",
-    "deploy": "surge ./public --domain adventure-time.ambethia.surge.sh",
+    "deploy": "yarn build && surge ./public --domain tic-tac-toe-react.ambethia.surge.sh",
     "start": "webpack-dev-server",
-    "prebuild": "rm -f public/*.html public/app-*.js public/vendor-*.js public/screen-*.css",
+    "prebuild": "rm -f public/index.html public/app-*.js public/vendor-*.js public/screen-*.css",
     "build": "NODE_ENV=production webpack --progress"
   },
   "dependencies": {
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.2",
-    "babel-loader": "^6.4.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.18.8",
     "browser-sync-webpack-plugin": "^1.1.4",
-    "classnames": "^2.2.5",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.1",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
-    "eslint-config-standard-react": "^4.3.0",
+    "eslint-config-standard-react": "^5.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-promise": "^3.5.0",
@@ -31,22 +29,26 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "mobx": "^3.1.9",
+    "mobx-react": "^4.1.8",
     "node-sass": "^4.5.2",
     "postcss-loader": "^1.3.3",
     "raw-loader": "^0.5.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "next",
-    "react-router-dom": "^4.1.1",
     "redbox-react": "^1.3.6",
     "sass-loader": "^6.0.3",
-    "style-loader": "^0.16.1",
+    "style-loader": "^0.17.0",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
     "surge": "^0.19.0",
     "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.2",
+    "webpack-dev-server": "^2.4.5",
     "webpack-merge": "^4.1.0",
     "whatwg-fetch": "^2.0.3"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4"
   }
 }
