--- a/one-list-firebase/package.json
+++ b/one-list-firebase/package.json
@@ -29,7 +29,9 @@
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "firebase": "^3.9.0",
     "html-webpack-plugin": "^2.28.0",
+    "lodash": "^4.17.4",
     "node-sass": "^4.5.2",
     "postcss-loader": "^1.3.3",
     "raw-loader": "^0.5.1",
