--- a/one-list-auth/package.json
+++ b/one-list-auth/package.json
@@ -7,6 +7,7 @@
     "build": "NODE_ENV=production webpack --progress"
   },
   "dependencies": {
+    "auth0-lock": "^10.15.1",
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
@@ -17,6 +18,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.18.8",
     "browser-sync-webpack-plugin": "^1.1.4",
+    "classnames": "^2.2.5",
     "css-loader": "^0.28.1",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
@@ -29,6 +31,8 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "mobx": "^3.1.9",
+    "mobx-react": "^4.1.8",
     "node-sass": "^4.5.2",
     "postcss-loader": "^1.3.3",
     "raw-loader": "^0.5.1",
@@ -45,5 +49,8 @@
     "webpack-dev-server": "^2.4.5",
     "webpack-merge": "^4.1.0",
     "whatwg-fetch": "^2.0.3"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4"
   }
 }
