--- a/adventure-time/package.json
+++ b/adventure-time/package.json
@@ -31,6 +31,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "markdown-it": "^8.3.1",
     "node-sass": "^4.5.2",
     "postcss-loader": "^1.3.3",
     "raw-loader": "^0.5.1",
