--- a/pong/package.json
+++ b/pong/package.json
@@ -42,9 +42,12 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "whatwg-fetch": "^2.0.3",
+    "mobx": "^3.1.11",
+    "mobx-react": "^4.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-hot-loader": "next"
+    "react-hot-loader": "next",
+    "react-router-dom": "^4.1.1",
+    "whatwg-fetch": "^2.0.3"
   }
 }
